--- a/ToolsCollectionForProgram/ToolsCollectionForProgram.csproj
+++ b/ToolsCollectionForProgram/ToolsCollectionForProgram.csproj
@@ -68,6 +68,12 @@
     <Compile Include="GenerateRandomValue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UCBatchGenerationTime.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UCBatchGenerationTime.Designer.cs">
+      <DependentUpon>UCBatchGenerationTime.cs</DependentUpon>
+    </Compile>
     <Compile Include="UCEntityClassAssignment.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -119,6 +125,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UCBatchGenerationTime.resx">
+      <DependentUpon>UCBatchGenerationTime.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UCEntityClassAssignment.resx">
       <DependentUpon>UCEntityClassAssignment.cs</DependentUpon>
     </EmbeddedResource>
