--- a/ToolsCollectionForProgram/ToolsCollectionForProgram.csproj
+++ b/ToolsCollectionForProgram/ToolsCollectionForProgram.csproj
@@ -69,11 +69,18 @@
     <Compile Include="GenerateRandomValue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RichTextBoxMenu.cs" />
     <Compile Include="UCBatchGenerationTime.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UCBatchGenerationTime.Designer.cs">
       <DependentUpon>UCBatchGenerationTime.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UCCount.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UCCount.Designer.cs">
+      <DependentUpon>UCCount.cs</DependentUpon>
     </Compile>
     <Compile Include="UCEntityClassAssignment.cs">
       <SubType>UserControl</SubType>
@@ -146,6 +153,9 @@
     </Compile>
     <EmbeddedResource Include="UCBatchGenerationTime.resx">
       <DependentUpon>UCBatchGenerationTime.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UCCount.resx">
+      <DependentUpon>UCCount.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UCEntityClassAssignment.resx">
       <DependentUpon>UCEntityClassAssignment.cs</DependentUpon>
