--- a/ToolsCollectionForProgram/ToolsCollectionForProgram.csproj
+++ b/ToolsCollectionForProgram/ToolsCollectionForProgram.csproj
@@ -40,6 +40,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\dll\Gaiokane 2.0 含删除\Gaiokane.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data, Version=8.0.18.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -54,6 +58,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigSettings.cs" />
+    <Compile Include="FrmDatabasesNameList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmDatabasesNameList.Designer.cs">
+      <DependentUpon>FrmDatabasesNameList.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +80,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RichTextBoxMenu.cs" />
+    <Compile Include="SqlHelper.cs" />
     <Compile Include="UCBatchGenerationTime.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -118,6 +129,12 @@
     <Compile Include="UCSmplifySQL.Designer.cs">
       <DependentUpon>UCSmplifySQL.cs</DependentUpon>
     </Compile>
+    <Compile Include="UCSQLTableStructure.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UCSQLTableStructure.Designer.cs">
+      <DependentUpon>UCSQLTableStructure.cs</DependentUpon>
+    </Compile>
     <Compile Include="UCTimeCalculator.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -136,6 +153,9 @@
     <Compile Include="UCUpperLowerCaseConversion.Designer.cs">
       <DependentUpon>UCUpperLowerCaseConversion.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="FrmDatabasesNameList.resx">
+      <DependentUpon>FrmDatabasesNameList.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -150,6 +170,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="UCBatchGenerationTime.resx">
       <DependentUpon>UCBatchGenerationTime.cs</DependentUpon>
@@ -175,6 +196,9 @@
     <EmbeddedResource Include="UCSmplifySQL.resx">
       <DependentUpon>UCSmplifySQL.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UCSQLTableStructure.resx">
+      <DependentUpon>UCSQLTableStructure.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UCTimeCalculator.resx">
       <DependentUpon>UCTimeCalculator.cs</DependentUpon>
     </EmbeddedResource>
@@ -199,6 +223,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Collection.ico" />
+    <Content Include="lib\MySql.Data.dll" />
+    <None Include="Resources\20200417084103500_easyicon_net_128.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
